Replaced .toList() calls which create immutable Lists for mutable ones